commit all file.

--- a/works/snow/index.html
+++ b/works/snow/index.html
@@ -25,6 +25,6 @@
     <!-- Canvas -->
     <canvas id="canvas">This browser cannot use a canvas.</canvas>
     <!-- Script -->
-    <script src="./main.js"></script>
+    <script src="./snow.js"></script>
   </body>
 </html>
