--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head></head>
   <body>
-    <p>Toshiya Marukubo.</p>
+    <p>Toshiya Marukubo</p>
+    <ul>
+      <li><a href="./works/snow">snow</a></li>
+    </ul>
   </body>
 </html>
