--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
-  <head></head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Toshiya Marukubo || GitHub.io</title>
+  </head>
   <body>
-    <p>Toshiya Marukubo</p>
+    <h1>Toshiya Marukubo</h1>
+    <h2>Works</h2>
     <ul>
       <li><a href="./works/snow">snow</a></li>
     </ul>
