--- a/works/snow/index.html
+++ b/works/snow/index.html
@@ -22,9 +22,12 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <!-- Loading -->
+    <p id="loading">Now Loading...</p>
     <!-- Canvas -->
-    <canvas id="canvas">This browser cannot use a canvas.</canvas>
+    <canvas id="canvas" style="visibility: hidden;">This browser cannot use a canvas.</canvas>
     <!-- Script -->
+    <script src="../loading.js"></script>
     <script src="./snow.js"></script>
   </body>
 </html>
