--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toshiya Marukubo || GitHub.io</title>
   </head>
   <body>
