--- a/works/starlight/index.html
+++ b/works/starlight/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | marukubo.net | snow.js">
+    <meta property="og:title" content="Toshiya Marukubo | marukubo.net | starlight.js">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://marukubo.net">
     <meta property="og:descriptio" content="I'm a non-professional, and... neither engineer nor designer.">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | marukubo.net | snow.js</title>
+    <title>Toshiya Marukubo | marukubo.net | starlight.js</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -28,6 +28,6 @@
     <canvas id="canvas" style="visibility: hidden;">This browser cannot use a canvas.</canvas>
     <!-- Script -->
     <script src="../loading.js"></script>
-    <script src="./snow.js"></script>
+    <script src="./starlight.js"></script>
   </body>
 </html>
