--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Toshiya Marukubo</h1>
     <h2>Works</h2>
     <ul>
-      <li><a href="./works/snow">snow</a></li>
+      <li><a href="./works/snow">Snow</a></li>
+      <li><a href="./works/starlight">Starlight</a></li>
     </ul>
   </body>
 </html>
