--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <h1>Toshiya Marukubo</h1>
     <h2>Works</h2>
     <ul>
+      <li><a href="../">..</a></li>
       <li><a href="./works/snow">Snow</a></li>
       <li><a href="./works/starlight">Starlight</a></li>
+      <li><a href="./works/milkyWay">milkyWay</a></li>
     </ul>
   </body>
 </html>
