--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <ul>
       <li><a href="./works/snow">Snow</a></li>
       <li><a href="./works/starlight">Starlight</a></li>
-      <li><a href="./works/milkyWay">milkyWay</a></li>
+      <li><a href="./works/milkyWay">Milkyway</a></li>
+      <li><a href="./works/fireball">Fireball</a></li>
     </ul>
   </body>
 </html>
