--- a/index.html
+++ b/index.html
@@ -1,17 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toshiya Marukubo || GitHub.io</title>
+    <meta charset="utf-8">
+    <meta name="description" content="I'm a non-professional, and... neither engineer nor designer.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/">
+    <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
+    <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@toshiyamarukubo">
+    <meta name="twitter:creator" content="@toshiyamarukubo">
+    <title>Toshiya Marukubo | GitHub.io</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./home/css/reset.css">
+    <link rel="stylesheet" href="./home/css/style.css">
   </head>
   <body>
-    <h1>Toshiya Marukubo</h1>
-    <h2>Works</h2>
-    <ul>
-      <li><a href="./works/snow">Snow</a></li>
-      <li><a href="./works/starlight">Starlight</a></li>
-      <li><a href="./works/milkyWay">Milkyway</a></li>
-      <li><a href="./works/fireball">Fireball</a></li>
-    </ul>
+    <!-- Main -->
+    <div id="main">
+      <h1><a href="/">Toshiya Marukubo</a></h1>
+      <p>I'm a non-professional, <br class="smp">and... neither engineer nor designer.</p>
+      <nav>
+        <ul>
+          <li id="worksBtn"><a href="#">Works</a></li>
+          <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+          <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
+          <li><a href="/blogs">Blog</a></li>
+          <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- Loading -->
+    <p id="loading">Now Loading...</p>
+    <!-- Content -->
+    <div id="contents" style="visibility: hidden;">
+      <!-- Game -->
+      <div id="game" class="centerCenter">
+        <!-- Start Game -->
+        <div id="first" class="centerCenter"> 
+          <p id="start"><a href="#">Click to start.</a></p>
+        </div>
+        <!-- Select Vehicle -->
+        <div id="second" class="centerCenter">
+          <p>Please choose a vehicle.</p>
+          <ul id="vehicles">
+            <li id="carBtn"><a href="#">Car</a></li>
+            <li id="bicyBtn"><a href="#">Bicycle</a></li>
+            <li id="snowplowBtn"><a href="#">Snowplow</a></li>
+          </ul>
+        </div>
+        <!-- Control Vehicle -->
+        <div id="third" class="centerCenter">
+          <p>Please Keep moving <br class="smp">the mouse on arrows.</p>
+          <ul>
+            <li id="back"><a href="#"><i class="fas fa-long-arrow-alt-left"></i></a></li>
+            <li><span id="speed">1</span> km/h</li>
+            <li id="go"><a href="#"><i class="fas fa-long-arrow-alt-right"></i></a></li>
+          </ul>
+          <p class="reset"><a href="#">Reset</a></p>
+        </div>
+        <!-- Finish Game -->
+        <div id="forth" class="centerCenter">
+          <p class="finish">Finish! Thanks.</p>
+          <p class="reset"><a href="#">Reset</a></p>
+        </div>
+      </div>
+      <!-- Works -->
+      <div id="works" style="display: none;">
+        <span id="close"><a href="#"><i class="fas fa-times fa-2x"></i></a></span>
+        <ul class="fa-ul">
+          <li><a href="./works/snow/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>snow</a></li>
+          <li><a href="./works/starlight/index.html"><span class="fa-li"><i class="fas fa-star"></i></span>starlight</a></li>
+          <li><a href="./works/milkyWay/index.html"><span class="fa-li"><i class="far fa-star"></i></span>milkyWay</a></li>
+          <li><a href="./works/fireball/index.html"><span class="fa-li"><i class="fas fa-burn"></i></span>fireball</a></li>
+          <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
+        </ul>
+      </div>
+      <!-- Vehicles -->
+      <span id="car" style="display: block;"><i class="vehicle fas fa-car-side fa-3x" data-fa-transform="down-1"></i></span>
+      <span id="bicycle" style="display: none;"><i class="vehicle fas fa-biking fa-3x"></i></span>
+      <span id="snowplow" style="display: none;"><i class="vehicle fas fa-snowplow fa-3x"></i></span>
+      <!-- Canvas -->
+      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+    </div>
+    <!-- Script -->
+    <script src="./home/js/centerCenter.js"></script>
+    <script src="./home/js/loading.js"></script>
+    <script src="./home/js/snowyTown.js"></script>
+    <script src="./home/js/worksOpen.js"></script>
+    <script src="./home/js/comingSoon.js"></script>
+    <script src="./home/js/all.min.js"></script>
   </body>
 </html>
