--- a/works/milkyWay/index.html
+++ b/works/milkyWay/index.html
@@ -6,28 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | marukubo.net | milkyWay.js">
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | milkyWay.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://marukubo.net">
-    <meta property="og:descriptio" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta property="og:site_name" content="marukubo.net">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/milkyWay/index.html">
+    <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
+    <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
+    <meta property="og:image">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | marukubo.net | milkyWay.js</title>
+    <title>Toshiya Marukubo | GitHub.io | milkyWay.js</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <!-- Main -->
+    <div id="main">
+      <h1>milkyWay</h1>
+      <p>Created date / 2020.01.10</p>
+      <p><a href="../../index.html">Back</a></p>
+    </div>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Canvas -->
-    <canvas id="canvas" style="visibility: hidden;">This browser cannot use a canvas.</canvas>
+    <!-- Contents -->
+    <div id="contents" style="visibility: hidden;">
+      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+    </div>
     <!-- Script -->
-    <script src="../loading.js"></script>
+    <script src="../../home/js/loading.js"></script>
     <script src="./milkyWay.js"></script>
   </body>
 </html>
