--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <li><a href="./works/starlight/index.html"><span class="fa-li"><i class="fas fa-star"></i></span>starlight</a></li>
           <li><a href="./works/milkyWay/index.html"><span class="fa-li"><i class="far fa-star"></i></span>milkyWay</a></li>
           <li><a href="./works/fireball/index.html"><span class="fa-li"><i class="fas fa-burn"></i></span>fireball</a></li>
+          <li><a href="./works/grassGrow/index.html"><span class="fa-li"><i class="fas fa-tint"></i></span>grassGrow</a></li>
           <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
         </ul>
       </div>
