--- a/works/grassGrow/index.html
+++ b/works/grassGrow/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | snow.js">
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | grassGrow.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/snow/index.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/grassGrow/index.html">
     <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:image">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | snow.js</title>
+    <title>Toshiya Marukubo | GitHub.io | grassGrow.js</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -24,8 +24,8 @@
   <body>
     <!-- Main -->
     <div id="main">
-      <h1>snow</h1>
-      <p>Created date / 2020.01.08</p>
+      <h1>grassGrow</h1>
+      <p>Created date / 2020.01.15</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
@@ -36,7 +36,7 @@
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./snow.js"></script>
+    <script src="./grassGrow.js"></script>
   </body>
 </html>
 
