--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="works" style="display: none;">
         <span id="close"><a href="#"><i class="fas fa-times fa-2x"></i></a></span>
         <ul class="fa-ul">
-          <li><a href="./works/snow/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>snow</a></li>
+          <li><a href="./works/jewelrySnow/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>jewelrySnow</a></li>
           <li><a href="./works/starlight/index.html"><span class="fa-li"><i class="fas fa-star"></i></span>starlight</a></li>
           <li><a href="./works/milkyWay/index.html"><span class="fa-li"><i class="far fa-star"></i></span>milkyWay</a></li>
           <li><a href="./works/fireball/index.html"><span class="fa-li"><i class="fas fa-burn"></i></span>fireball</a></li>
