--- a/works/grassGrow/index.html
+++ b/works/grassGrow/index.html
@@ -31,12 +31,14 @@
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Contents -->
+    <span id="cloud" style="visibility: hidden;"><i class="fas fa-cloud fa-4x"></i></span>
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./grassGrow.js"></script>
+    <script src="../../home/js/all.min.js"></script>
   </body>
 </html>
 
