--- a/works/grassGrow/index.html
+++ b/works/grassGrow/index.html
@@ -25,7 +25,7 @@
     <!-- Main -->
     <div id="main">
       <h1>grassGrow</h1>
-      <p>Created date / 2020.01.15</p>
+      <p>Created date / January 15, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
