--- a/works/jewelrySnow/index.html
+++ b/works/jewelrySnow/index.html
@@ -25,7 +25,7 @@
     <!-- Main -->
     <div id="main">
       <h1>jewelrySnow</h1>
-      <p>Created date / 2020.01.08</p>
+      <p>Created date / January 8, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
