--- a/works/mellomelloMellow/index.html
+++ b/works/mellomelloMellow/index.html
@@ -26,7 +26,7 @@
     <div id="main">
       <h1>mellomelloMellow</h1>
       <h2>Inspired by Pirate Empress Boa Hancock from ONE PIECE.</h2>
-      <p>Created date / 2020.01.15</p>
+      <p>Created date / January 15, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
