--- a/works/milkyWay/index.html
+++ b/works/milkyWay/index.html
@@ -25,7 +25,7 @@
     <!-- Main -->
     <div id="main">
       <h1>milkyWay</h1>
-      <p>Created date / 2020.01.10</p>
+      <p>Created date / January 10, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
