--- a/works/fireball/index.html
+++ b/works/fireball/index.html
@@ -25,7 +25,7 @@
     <!-- Main -->
     <div id="main">
       <h1>fireball</h1>
-      <p>Created date / 2020.01.11</p>
+      <p>Created date / January 11, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
