--- a/works/starlight/index.html
+++ b/works/starlight/index.html
@@ -25,7 +25,7 @@
     <!-- Main -->
     <div id="main">
       <h1>starlight</h1>
-      <p>Created date / 2020.01.09</p>
+      <p>Created date / January 9, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
