--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <li><a href="./works/grassGrow/index.html"><span class="fa-li"><i class="fas fa-tint"></i></span>grassGrow</a></li>
           <li><a href="./works/mellomelloMellow/index.html"><span class="fa-li"><i class="fas fa-heart"></i></span>mellomelloMellow</a></li>
           <li><a href="./works/rainyDay/index.html"><span class="fa-li"><i class="fas fa-umbrella"></i></span>rainyDay</a></li>
+          <li><a href="./works/256/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>256</a></li>
           <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
         </ul>
       </div>
