--- a/works/65536/index.html
+++ b/works/65536/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | 256.js">
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | 65536.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/256/index.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/65536/index.html">
     <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:image">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | 256.js</title>
+    <title>Toshiya Marukubo | GitHub.io | 65536.js</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -24,7 +24,7 @@
   <body>
     <!-- Main -->
     <div id="main">
-      <h1>256</h1>
+      <h1>65536</h1>
       <p>Created date / January 21, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
@@ -33,10 +33,14 @@
     <!-- Contents -->
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <div class="controller">
+        <label for="split">Split</label>
+        <input type="range" id="split" min="0" max="256" step="4">
+      </div>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./256.js"></script>
+    <script src="./65536.js"></script>
   </body>
 </html>
 
