--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <li><a href="./works/mellomelloMellow/index.html"><span class="fa-li"><i class="fas fa-heart"></i></span>mellomelloMellow</a></li>
           <li><a href="./works/rainyDay/index.html"><span class="fa-li"><i class="fas fa-umbrella"></i></span>rainyDay</a></li>
           <li><a href="./works/65536/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>65536</a></li>
+          <li><a href="./works/unknownVer1/index.html"><span class="fa-li"><i class="fas fa-question"></i></span>unknownVer1</a></li>
           <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
         </ul>
       </div>
