--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           <li><a href="./works/65536/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>65536</a></li>
           <li><a href="./works/unknownVer1/index.html"><span class="fa-li"><i class="fas fa-question"></i></span>unknownVer1</a></li>
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
+          <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
           <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
         </ul>
       </div>
