--- a/works/65536/index.html
+++ b/works/65536/index.html
@@ -34,8 +34,7 @@
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
-        <label for="split">Split</label>
-        <input type="range" id="split" min="0" max="256" step="4">
+        <input type="range" id="split" min="0" max="256" step="4" value="16">
       </div>
     </div>
     <!-- Script -->
