--- a/works/fireworks/index.html
+++ b/works/fireworks/index.html
@@ -34,8 +34,7 @@
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
-        <label for="count">Reduce / Increase</label>
-        <input type="range" id="count" min="0" max="20" step="1">
+        <input type="range" id="count" min="0" max="20" step="1" value="10">
       </div>
     </div>
     <!-- Script -->
