--- a/works/fireball/index.html
+++ b/works/fireball/index.html
@@ -33,6 +33,9 @@
     <!-- Contents -->
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <div class="controller">
+        <input type="range" id="count" min="0" max="100" value="50">
+      </div>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
