--- a/works/giantKilling/index.html
+++ b/works/giantKilling/index.html
@@ -34,6 +34,9 @@
     <!-- Contents -->
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <div class="controller">
+        <input type="range" id="speed" min="0" max="30" value="1">
+      </div>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
