--- a/works/rainyDay/index.html
+++ b/works/rainyDay/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Protocol -->
     <meta property="og:title" content="Toshiya Marukubo | GitHub.io | rainyDay.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/prayForAustralia/index.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/rainyDay/index.html">
     <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:image">
@@ -34,8 +34,7 @@
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
-          <label for="amount">Rainfall</label>
-          <input type="range" id="amount" min="0" max="1000">
+          <input type="range" id="amount" min="0" max="1000" value="500">
       </div>
     </div>
     <!-- Script -->
