--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Works -->
       <div id="works" style="display: none;">
         <span id="close"><a href="#"><i class="fas fa-times fa-2x"></i></a></span>
-        <ul class="fa-ul">
+        <ul id="worksList" class="fa-ul">
           <li><a href="./works/jewelrySnow/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>jewelrySnow</a></li>
           <li><a href="./works/starlight/index.html"><span class="fa-li"><i class="fas fa-star"></i></span>starlight</a></li>
           <li><a href="./works/milkyWay/index.html"><span class="fa-li"><i class="far fa-star"></i></span>milkyWay</a></li>
@@ -91,7 +91,6 @@
           <li><a href="./works/65536/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>65536</a></li>
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
           <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
-          <li class="comingSoon"><a href="#"><span class="fa-li"><i class="fas fa-cloud-sun-rain"></i></span>afterRaining</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
@@ -100,12 +99,14 @@
       <span id="snowplow" style="display: none;"><i class="vehicle fas fa-snowplow fa-3x"></i></span>
       <!-- Canvas -->
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <iframe src="" id="dispWorks" style="display: none;"></iframe>
     </div>
     <!-- Script -->
     <script src="./home/js/centerCenter.js"></script>
     <script src="./home/js/loading.js"></script>
     <script src="./home/js/snowyTown.js"></script>
     <script src="./home/js/worksOpen.js"></script>
+    <script src="./home/js/worksHover.js"></script>
     <script src="./home/js/comingSoon.js"></script>
     <script src="./home/js/all.min.js"></script>
   </body>
