--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <li><a href="./works/65536/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>65536</a></li>
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
           <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
+          <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
@@ -99,7 +100,7 @@
       <span id="snowplow" style="display: none;"><i class="vehicle fas fa-snowplow fa-3x"></i></span>
       <!-- Canvas -->
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
-      <iframe src="" id="dispWorks" style="display: none;"></iframe>
+      <iframe src="#" id="dispWorks" style="display: none;"></iframe>
     </div>
     <!-- Script -->
     <script src="./home/js/centerCenter.js"></script>
