--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
           <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
           <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
+          <li><a href="./works/kiraYaba/index.html"><span class="fa-li"><i class="fas fa-star-half-alt"></i></span>kiraYaba</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
