--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
           <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
           <li><a href="./works/kiraYaba/index.html"><span class="fa-li"><i class="fas fa-star-half-alt"></i></span>kiraYaba</a></li>
+          <li><a href="./works/snowyLandscape/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>snowyLandscape</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
