--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <!-- Works -->
       <div id="works" style="display: none;">
         <span id="close"><a href="#"><i class="fas fa-times fa-2x"></i></a></span>
+        <h2>Created by pure JavaScript and canvas.</h2>
         <ul id="worksList" class="fa-ul">
           <li><a href="./works/jewelrySnow/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>jewelrySnow</a></li>
           <li><a href="./works/starlight/index.html"><span class="fa-li"><i class="fas fa-star"></i></span>starlight</a></li>
