--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <li><a href="./works/kiraYaba/index.html"><span class="fa-li"><i class="fas fa-star-half-alt"></i></span>kiraYaba</a></li>
           <li><a href="./works/snowyLandscape/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>snowyLandscape</a></li>
           <li><a href="./works/torch/index.html"><span class="fa-li"><i class="fab fa-gripfire"></i></span>torch</a></li>
+          <li><a href="./works/flyfire/index.html"><span class="fa-li"><i class="fas fa-fire-alt"></i></span>flyfire</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
