--- a/works/firefly/index.html
+++ b/works/firefly/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | flyfire.js">
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | firefly.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/flyfire/index.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/firefly/index.html">
     <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:image">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | flyfire.js</title>
+    <title>Toshiya Marukubo | GitHub.io | firefly.js</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -24,7 +24,7 @@
   <body>
     <!-- Main -->
     <div id="main">
-      <h1>flyfire</h1>
+      <h1>firefly</h1>
       <h2>Inspired by Fire Fist Ace from ONE PIECE.</h2>
       <p>Created date / January 31, 2020</p>
       <p><a href="../../index.html">Back</a></p>
@@ -37,7 +37,7 @@
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./flyfire.js"></script>
+    <script src="./firefly.js"></script>
   </body>
 </html>
 
