--- a/works/firefly/index.html
+++ b/works/firefly/index.html
@@ -26,6 +26,7 @@
     <div id="main">
       <h1>firefly</h1>
       <h2>Inspired by Fire Fist Ace from ONE PIECE.</h2>
+      <p>Please click on the window.</p>
       <p>Created date / January 31, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
