--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
           <li><a href="./works/snowyLandscape/index.html"><span class="fa-li"><i class="fas fa-snowflake"></i></span>snowyLandscape</a></li>
           <li><a href="./works/torch/index.html"><span class="fa-li"><i class="fab fa-gripfire"></i></span>torch</a></li>
           <li><a href="./works/firefly/index.html"><span class="fa-li"><i class="fas fa-fire-alt"></i></span>firefly</a></li>
+          <li><a href="./works/aquarium/index.html"><span class="fa-li"><i class="fas fa-water"></i></span>aquarium</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
