--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <li><a href="./works/firefly/index.html"><span class="fa-li"><i class="fas fa-fire-alt"></i></span>firefly</a></li>
           <li><a href="./works/aquarium/index.html"><span class="fa-li"><i class="fas fa-water"></i></span>aquarium</a></li>
           <li><a href="./works/happyValentine/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>happyValentine</a></li>
+          <li><a href="./works/chocolate/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>chocolate</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
