--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <li><a href="./works/aquarium/index.html"><span class="fa-li"><i class="fas fa-water"></i></span>aquarium</a></li>
           <li><a href="./works/happyValentine/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>happyValentine</a></li>
           <li><a href="./works/chocolate/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>chocolate</a></li>
+          <li><a href="./works/fullMoon/index.html"><span class="fa-li"><i class="fas fa-moon"></i></span>fullMoon</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
