--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <li><a href="./works/happyValentine/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>happyValentine</a></li>
           <li><a href="./works/chocolate/index.html"><span class="fa-li"><i class="far fa-heart"></i></span>chocolate</a></li>
           <li><a href="./works/fullMoon/index.html"><span class="fa-li"><i class="fas fa-moon"></i></span>fullMoon</a></li>
+          <li><a href="./works/sineWave/index.html"><span class="fa-li"><i class="fas fa-wave-square"></i></span>sineWave</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
