--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
       gtag('js', new Date());
       gtag('config', 'UA-149600281-2');
     </script>
+    <!-- Meta -->
     <meta charset="utf-8">
-    <meta name="description" content="I'm a non-professional, and... neither engineer nor designer.">
+    <meta name="description" content="I'm a non-professional. Neither web dev nor designer.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
-    <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
+    <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io</title>
+    <!-- Icons -->
+    <link rel="icon" href="./home/img/favicon.svg" sizes="any" type="image/svg+xml">
+    <!-- Title -->
+    <title>Toshiya Marukubo | Homepage</title>
     <!-- CSS -->
     <link rel="stylesheet" href="./home/css/reset.css">
     <link rel="stylesheet" href="./home/css/style.css">
@@ -32,7 +36,7 @@
     <!-- Main -->
     <div id="main">
       <h1><a href="/">Toshiya Marukubo</a></h1>
-      <p>I'm a non-professional, <br class="smp">and... neither engineer nor designer.</p>
+      <p>I'm a non-professional. Neither web dev nor designer.</p>
       <nav>
         <ul>
           <li id="worksBtn"><a href="#">Works</a></li>
@@ -46,37 +50,6 @@
     <p id="loading">Now Loading...</p>
     <!-- Content -->
     <div id="contents" style="visibility: hidden;">
-      <!-- Game -->
-      <div id="game" class="centerCenter">
-        <!-- Start Game -->
-        <div id="first" class="centerCenter"> 
-          <p id="start"><a href="#">Click to start.</a></p>
-        </div>
-        <!-- Select Vehicle -->
-        <div id="second" class="centerCenter">
-          <p>Please choose a vehicle.</p>
-          <ul id="vehicles">
-            <li id="carBtn"><a href="#">Car</a></li>
-            <li id="bicyBtn"><a href="#">Bicycle</a></li>
-            <li id="snowplowBtn"><a href="#">Snowplow</a></li>
-          </ul>
-        </div>
-        <!-- Control Vehicle -->
-        <div id="third" class="centerCenter">
-          <p>Please Keep moving <br class="smp">the mouse on arrows.</p>
-          <ul>
-            <li id="back"><a href="#"><i class="fas fa-long-arrow-alt-left"></i></a></li>
-            <li><span id="speed">1</span> km/h</li>
-            <li id="go"><a href="#"><i class="fas fa-long-arrow-alt-right"></i></a></li>
-          </ul>
-          <p class="reset"><a href="#">Reset</a></p>
-        </div>
-        <!-- Finish Game -->
-        <div id="forth" class="centerCenter">
-          <p class="finish">Finish! Thanks.</p>
-          <p class="reset"><a href="#">Reset</a></p>
-        </div>
-      </div>
       <!-- Works -->
       <div id="works" style="display: none;">
         <span id="close"><a href="#"><i class="fas fa-times fa-2x"></i></a></span>
@@ -107,8 +80,6 @@
       </div>
       <!-- Vehicles -->
       <span id="car" style="display: block;"><i class="vehicle fas fa-car-side fa-3x" data-fa-transform="down-1"></i></span>
-      <span id="bicycle" style="display: none;"><i class="vehicle fas fa-biking fa-3x"></i></span>
-      <span id="snowplow" style="display: none;"><i class="vehicle fas fa-snowplow fa-3x"></i></span>
       <!-- Canvas -->
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <iframe src="#" id="dispWorks" style="display: none;"></iframe>
