--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:image" content="./home/img/og-image.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og-image.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <!-- Twitter Card -->
