--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage">
     <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og-image.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
-    <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
+
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
