--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
     <meta property="og:title" content="Toshiya Marukubo | Homepage">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og-image.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-home.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
-
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
     <!-- Icons -->
-    <link rel="icon" href="./home/img/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
     <title>Toshiya Marukubo | Homepage</title>
     <!-- CSS -->
