--- a/works/jewelrySnow/index.html
+++ b/works/jewelrySnow/index.html
@@ -19,7 +19,7 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
     <meta property="og:title" content="Toshiya Marukubo | Homepage | jewelrySnow">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og-image.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og-jewelrySnow.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
