fixed all files.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           <li><a href="./works/fullMoon/index.html"><span class="fa-li"><i class="fas fa-moon"></i></span>fullMoon</a></li>
           <li><a href="./works/neonWave/index.html"><span class="fa-li"><i class="fas fa-wave-square"></i></span>neonWave</a></li>
           <li><a href="./works/mamaragan/index.html"><span class="fa-li"><i class="fas fa-bolt"></i></span>mamaragan</a></li>
+          <li><a href="./works/particleParty/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>particleParty</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
