--- a/works/particleParty/index.html
+++ b/works/particleParty/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | starlight">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-starlight.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | particleParty">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-particleParty.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | starlight</title>
+    <title>Toshiya Marukubo | Homepage | particleParty</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,8 +36,9 @@
   <body>
     <!-- Main -->
     <div id="main">
-      <h1>starlight</h1>
-      <p>Created date / January 9, 2020</p>
+      <h1>particleParty</h1>
+      <h2>Click and move, and they will gather to the party. so click again, they will break up.</h2>
+      <p>Created date / February 20, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
@@ -48,6 +49,7 @@
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./starlight.js"></script>
+    <script src="./particleParty.js"></script>
   </body>
 </html>
+
