--- a/works/orangeKun/index.html
+++ b/works/orangeKun/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | fireworks">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-fireworks.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | orangeKun">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-orangeKun.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | fireworks</title>
+    <title>Toshiya Marukubo | Homepage | orangeKun</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,8 +36,9 @@
   <body>
     <!-- Main -->
     <div id="main">
-      <h1>fireworks</h1>
-      <p>Created date / January 23, 2020</p>
+      <h1>orangeKun</h1>
+      <h2>Please click the window. You can harvest many orange.</2>
+      <p>Created date / February 29, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </div>
     <!-- Loading -->
@@ -45,12 +46,10 @@
     <!-- Contents -->
     <div id="contents" style="visibility: hidden;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
-      <div class="controller">
-        <input type="range" id="count" min="0" max="40" step="1" value="20">
-      </div>
+      <p id="count">You got <span id="countNum">0</span>.</p>
     </div>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./fireworks.js"></script>
+    <script src="./orangeKun.js"></script>
   </body>
 </html>
