--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           <li><a href="./works/mellomelloMellow/index.html"><span class="fa-li"><i class="fas fa-heart"></i></span>mellomelloMellow</a></li>
           <li><a href="./works/rainyDay/index.html"><span class="fa-li"><i class="fas fa-umbrella"></i></span>rainyDay</a></li>
           <li><a href="./works/65536/index.html"><span class="fa-li"><i class="fas fa-palette"></i></span>65536</a></li>
+          <!---
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
+          -->
           <li><a href="./works/fireworks/index.html"><span class="fa-li"><i class="fas fa-fire"></i></span>fireworks</a></li>
           <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
           <li><a href="./works/kiraYaba/index.html"><span class="fa-li"><i class="fas fa-star-half-alt"></i></span>kiraYaba</a></li>
@@ -78,6 +80,7 @@
           <li><a href="./works/neonWave/index.html"><span class="fa-li"><i class="fas fa-wave-square"></i></span>neonWave</a></li>
           <li><a href="./works/mamaragan/index.html"><span class="fa-li"><i class="fas fa-bolt"></i></span>mamaragan</a></li>
           <li><a href="./works/particleParty/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>particleParty</a></li>
+          <li><a href="./works/orangeKun/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>orangeKun</a></li>
         </ul>
       </div>
       <!-- Vehicles -->
