--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
           All the works's code here is published on CodePen, GitHub. Please go to see it.<br>
           Please feel free to message me anytime on twitter, I'm so bored.<br>
-          Thanks!!!
         </p>
+        <p>Thanks!!!</p>
       </div>
       <!-- Works -->
       <div id="works" style="display: none;">
