--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>
           By the way, Please tell me about you :) You can send message me on twitter, I'm so bored.
         </p>
-        <p>Thanks.</p>
+        <p>Thanks for reading.</p>
       </div>
       <!-- Works -->
       <div id="works" style="display: none;">
