--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
           <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
           <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+          <li><small>&copy 2020 TM.</small></li>
         </ul>
       </nav>
     </div>
@@ -77,10 +78,11 @@
         <h2>This Site</h2>
         <p>
           I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
-          All the works's code here is published on CodePen, GitHub. Please go to see it.
+          All the works's code here is published on <a href="https://codepen.io/toshiya-marukubo">CodePen</a>, <a href="https://github.com/toshiya-marukubo">GitHub</a>. Please go to see it.
         </p>
+        <h2>You</h2>
         <p>
-          By the way, Please tell me about you :) You can send message me on twitter, I'm so bored.
+          By the way, Please tell me about you :) You can send message me on <a href="https://twitter.com/toshiyamarukubo">twitter</a>, I'm so bored.
         </p>
         <p>Thanks for reading.</p>
       </div>
