--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <ul>
           <li id="aboutBtn"><a href="#">About</a></li>
           <li id="worksBtn"><a href="#">Works</a></li>
-          <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-          <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
-          <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+          <li class="sm"><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+          <li class="sm"><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
+          <li class="sm"><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
           <li><small>&copy 2020 TM.</small></li>
         </ul>
       </nav>
